Added explanation text show/hide functionality. Note: it appears that isExplanationShown doesn't update immediately for some reason so I just did a workaround for now. Might need to fix this going forward.

--- a/src/App.css
+++ b/src/App.css
@@ -153,6 +153,21 @@ body {
   margin-bottom: 1.5rem;
 }
 
+.explanation-section.hidden .explanation-text {
+  position: relative;
+  display: inline-block;
+}
+
+.explanation-section.hidden .explanation-text::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  background-color: #f3f3f3;
+}
+
 .questions-nav-section {
   grid-area: questions-nav-section;
   padding: 1rem;
