Updated explanation section border

--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@ body {
 }
 
 .question-section {
-  grid-area: question-section
+  grid-area: question-section;
 }
 
 .question {
@@ -136,6 +136,7 @@ body {
   padding: 0.5rem; 
   border-radius: 0.5rem;
   box-shadow: 0 7px 7px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgb(223, 223, 223);
 }
 
 .explanation-section .section-title {
@@ -162,7 +163,7 @@ body {
   left: 0;
   right: 0;
   height: 100%;
-  background-color: #f3f3f3;
+  background-color: #c4c4c4;
 }
 
 .questions-nav-section {
