--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ body {
   width: 95%;
   max-width: 64rem;
   max-height: 95%;
+  min-height: 95%;
   background: #fff;
   padding: 0.8rem;
   border-radius: 1rem; 
