--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body {
   max-width: 64rem;
   max-height: 95%;
   min-height: 95%;
+  height: 95%;
   background: #fff;
   padding: 0.8rem;
   border-radius: 1rem; 
@@ -22,7 +23,10 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  
+}
+
+.grid-container {
+  height: 100%;
   display: grid;
   gap: 1rem;
   grid-template-columns: 2fr 2fr 1.5fr;
@@ -236,6 +240,35 @@ body {
   width: 100%; 
 } 
  
+.result-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 3px solid #001b27;
+  border-radius: 0.5rem;
+}
+
+.result-container p {
+  font-size: 2rem;
+  font-weight: 800;
+  margin-bottom: 1rem;
+}
+
+.btn-primary {
+  color: #fff;
+  background: #001b27;
+  text-transform: uppercase;
+}
+
+.btn-primary:hover,
+.btn-primary:active {
+  background: #2f3030;
+  filter: brightness(0.9);
+}
+
 @media(max-width: 51rem) {
   .container {   
     grid-template-rows: 0.1fr 1fr 1fr;
